--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,7 @@
 name: "DataScie & stuff"
 output_dir: "docs"
 navbar:
-  title: "Cars"
+  title: "DataScie & stuff"
   left:
   - text: "Home"
     href: index.html
